# min-logger

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENCE  README.md  library.properties  notes.md  platformio.ini
cmake/: BuildLogger.cmake
examples/: CMakeLists.txt
examples/binary_cpp/: CMakeLists.txt  binary_cpp.cpp
examples/custom_type/: CMakeLists.txt  custom_type.cpp  custom_type_type_defs.json
examples/esp32_pio/: esp32_hello.cpp  esp32_pio.cpp
examples/esp32_pio_project/: platformio.ini
examples/esp32_pio_project/src/: esp32_hello.cpp
examples/esp32_profiling/: esp32_profiling.cpp
examples/hello_c/: CMakeLists.txt  hello.c
examples/hello_cpp/: CMakeLists.txt  hello.cpp
examples/log_threads/: CMakeLists.txt  log_threads.cpp
examples/utils/: CMakeLists.txt  hex_printer.c  hex_printer.h
pio_scripts/: generate_example_logger.py  generate_logger.py
python/: .gitignore  .pylintrc  pyproject.toml
python/src/min_logger/: builder.py  builder_main.py  built_in_types.py  generate_perfetto.py  parser.py  parser_main.py  validate_types.py
python/tests/: test_builder.py  test_parse_args.py
scripts/: integration_tests.sh  lint_check.sh
src/min_logger/: min_logger.cpp  min_logger.h  min_logger_buffered_esp32.h  min_logger_crc.c  min_logger_crc.h
src/min_logger/platform_implementations/: buffered_esp32.cpp  defaults.cpp  lock_free_ring_buffer.cpp  lock_free_ring_buffer.h
test/: CMakeLists.txt  c_crc_test.c  cpp_crc_test.cpp  lock_free_ring_buffer_test.cpp
