[project]
name = "min-logger"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = ["jsonargparse", "shtab"]

[project.scripts]
min-logger-builder = "min-logger:builder_main"

[dependency-groups]
dev = ["pytest", "black", "pylint"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.black]
line-length = 100
