[project]
name = "min-logger"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = ["jsonargparse[signatures]", "argcomplete", "perfetto"]

[project.scripts]
min-logger-builder = "min_logger.builder_main:main"
min-logger-parser = "min_logger.parser_main:main"

[dependency-groups]
dev = ["pytest", "black", "pylint", "pyright"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.black]
line-length = 100

[tool.pyright]
include = ["src/", "tests/"]
